# NomadRehab

./: .gitignore  LICENSE  README.md
Doc/Motor/: image-17.jpg.crdownload
Doc/Sonar/Schematics/: multiplexer_board_ping_assigment.xlsx
Dockerfiles/: nomad200-ros2.Dockerfile
Hardware/: .gitignore
Hardware/motor_control_hat/00/motor_control_hat/: .gitignore  _autosave-motor_control_hat.kicad_pcb  _autosave-motor_control_hat.kicad_sch  motor_control_hat.csv  motor_control_hat.kicad_pcb  motor_control_hat.kicad_prl  motor_control_hat.kicad_pro  motor_control_hat.kicad_sch  motor_control_hat.xml
Hardware/motor_power_connector/00/motor_power_connector/: motor_power_connector.kicad_pcb  motor_power_connector.kicad_prl  motor_power_connector.kicad_pro  motor_power_connector.kicad_sch
Hardware/motor_power_connector/00/motor_power_connector/production/: positions.csv
Software/Firmware/microROS_integration_F746ZG/: .cproject  .mxproject  .project  README.md  STM32F746ZGTX_FLASH.ld  uROS_F7.ioc  uROS_F7.launch
Software/Firmware/microROS_integration_F746ZG/Core/Inc/: FreeRTOSConfig.h  main.h  microros_app.h  nomad_sonar.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h  uros_sonar.h
Software/Firmware/microROS_integration_F746ZG/Core/Src/: freertos.c  gpio.c  main.c  microros_app.c  nomad_sonar.c  stm32f7xx_hal_timebase_tim.c  stm32f7xx_it.c  udpecho.c  uros_sonar.c
Software/Firmware/microROS_integration_F746ZG/Core/Startup/: startup_stm32f746zgtx.s
Software/Firmware/microROS_integration_F746ZG/LWIP/App/: lwip.c
Software/Firmware/microROS_integration_F746ZG/MXTmpFiles/: cortex.tmp  eth_HalInit.tmp  eth_Msp.tmp  eth_vars.tmp  rtos_default_thread.tmp  rtos_vars.tmp  system.tmp
Software/Firmware/test_nomadSonar_F446RE/: .cproject  .mxproject  .project  NomadSonar Debug.launch  NomadSonar.ioc  README.md
Software/Firmware/test_nomadSonar_F446RE/Core/Inc/: main.h  nomad_sonar.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Software/Firmware/test_nomadSonar_F446RE/Core/Src/: gpio.c  main.c  (+2 more)
Software/Firmware/uROS_MotorController-MD03_F446RE/: .cproject  .mxproject  .project  uROS_MotorController-MD03_F446RE Debug.launch  uROS_MotorController-MD03_F446RE.ioc
Software/microROS_messages/motor_msgs/: CMakeLists.txt  package.xml
Software/microROS_messages/motor_msgs/msg/: MotorData.msg  MotorPosition.msg
Software/microROS_messages/motor_msgs/srv/: MotorService.srv
Software/microROS_messages/sensor_telemetry/: CMakeLists.txt  package.xml
Software/microROS_messages/sonar_msgs/: CMakeLists.txt  package.xml
Software/microROS_messages/sonar_msgs/msg/: SonarArray.msg  SonarData.msg
Software/microROS_messages/sonar_msgs/srv/: SonarService.srv
Software/nomad_ros2/: .gitignore
Software/nomad_ros2/nomad_hardware_interface/: CMakeLists.txt  nomad_hardware_interface.xml  package.xml
Software/nomad_ros2/nomad_hardware_interface/include/nomad_hardware_interface/: nomad_hardware_interface.hpp  nomad_motor_comms.hpp
Software/nomad_ros2/nomad_hardware_interface/src/: nomad_hardware_interface.cpp  nomad_motor_comms.cpp  test_serial.cpp
Software/nomad_ros2/nomad_robot/: CMakeLists.txt  README.md  package.xml
Software/nomad_ros2/nomad_robot/config/: config.rviz  joystick.yaml  nomad_drive_controller.yaml
Software/nomad_ros2/nomad_robot/description/: circular_sensor.xacro  gazebo_control.xacro  infrarated.xacro  materials.xacro  robot.urdf.xacro  robot_control.xacro  robot_wheels.xacro  sonar.xacro
Software/nomad_ros2/nomad_robot/launch/: joy_controller.launch.py  launch_sim.launch.py  nomad_robot.launch.py  nomad_sim.launch.py  rsp.launch.py  tricycle_drive.launch.py
Software/nomad_ros2/nomad_sensor_emulator/: CMakeLists.txt  package.xml
Software/nomad_ros2/nomad_sensor_emulator/src/: sensor_publisher.cpp
Software/nomad_ros2/synchro_drive_controller/: CMakeLists.txt  package.xml  synchro_drive_controller.xml
Software/nomad_ros2/synchro_drive_controller/config/: synchro_drive_controller.yaml
Software/nomad_ros2/synchro_drive_controller/include/synchro_drive_controller/: odometry.hpp  steering_limiter.hpp  synchro_drive_controller.hpp  traction_limiter.hpp  visibility_control.h
Software/nomad_ros2/synchro_drive_controller/src/: odometry.cpp  steering_limiter.cpp  synchro_drive_controller.cpp  traction_limiter.cpp
Software/nomad_ros2/synchro_drive_controller/test/: test_load_synchro_drive_controller.cpp  test_synchro_drive_controller.cpp
Software/nomad_ros2/urdf/: base.xacro  body.xacro  bumper.xacro  circular_sensor.xacro  ir.xacro  nomad_robot.urdf.xacro  sonar.xacro
nomad200-ros2/: README.md
nomad200-ros2/src/model/: CMakeLists.txt  package.xml
nomad200-ros2/src/model/launch/: nomad200_sim.launch.py
nomad200-ros2/src/model/worlds/: empty.sdf
(+78 files in other folders)
